# ur5_inf3480

./: CMakeLists.txt  README.md  package.xml
LeapMotionData/: 2016-05-19-08-48-57.bag
UbuntuWiFiFix/: bcmwl-kernel-source_6.30.223.141+bdcom-0ubuntu2_amd64.deb  dkms_2.2.0.3-1.1ubuntu5_all.deb
launch/: ur5_launch_inf3480.launch
src/: inf3480_move_robot.cpp
